--- a/views/UserPanel/header.ejs
+++ b/views/UserPanel/header.ejs
@@ -346,7 +346,7 @@
                                         <li><a href="/">Home</a></li>
                                         <% for(var cd of cate){%>
                                         <li class="mega" id="hover-cls">
-                                            <a href="/catproduct/<%=cd.id%>"><%=cd.cateName%></a>
+                                            <a href="#"><%=cd.cateName%></a>
                                             <ul class="mega-menu full-mega-menu">
                                                 <li>
                                                     <div class="container">
@@ -356,7 +356,7 @@
                                                             <div class="col mega-box">
                                                                 <div class="link-section">
                                                                     <div class="menu-title d-flex">
-                                                                        <h5 class="d-flex" ><a href="/scateproduct/<%=sd.id%>" class="h5" style="font-weight: 700;"><%=sd.scateName%></a></h5>
+                                                                        <h5 class="d-flex" ><a href="#" class="h5" style="font-weight: 700;"><%=sd.scateName%></a></h5>
                                                                     </div>
                                                                     <% for(var ed of ecate){
                                                                         if(sd.id == ed.subcategory){%>
