--- a/views/UserPanel/header.ejs
+++ b/views/UserPanel/header.ejs
@@ -274,8 +274,8 @@
                             <li class="onhover-dropdown mobile-account"> <i class="fa fa-user" aria-hidden="true"></i>
                                 My Account
                                 <ul class="onhover-show-div">
-                                    <li><a href="login.html">Login</a></li>
-                                    <li><a href="register.html">register</a></li>
+                                    <li><a href="/userlogin">Login</a></li>
+                                    <li><a href="/regiester">register</a></li>
                                 </ul>
                             </li>
                         </ul>
