--- a/views/UserPanel/userLogin.ejs
+++ b/views/UserPanel/userLogin.ejs
@@ -32,11 +32,11 @@
                     <form class="theme-form" action="/login" method="post">
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="text" class="form-control" id="email" placeholder="Email" required="">
+                            <input type="text" class="form-control" name="email" id="email" placeholder="Email" required="">
                         </div>
                         <div class="form-group">
                             <label for="review">Password</label>
-                            <input type="password" class="form-control" id="review"
+                            <input type="password" class="form-control" id="review" name="password"
                                 placeholder="Enter your password" required="">
                         </div>
                         <button type="submit" class="btn btn-solid">Login</button>
