--- a/views/UserPanel/userLogin.ejs
+++ b/views/UserPanel/userLogin.ejs
@@ -65,10 +65,20 @@
                             <label for="email">Confirm Password</label>
                             <input type="password" class="form-control" id="password" name="cpassword" placeholder="Password" required="">
                         </div>
-                        <button type="submit" class="btn btn-solid">Register</button>
+                        <button type="submit" class="btn btn-solid me-1">Register</button>
+                        <a href="javascript: void(0);" class="btn rounded-pill border-danger text-danger"><i class="fa-brands fa-google"></i></a>
                     </form>
+                    
+                </div>
+                <div class="text-center" style="z-index: 99;">
+                    <ul class="social-list list-inline mt-3 mb-0">   
+                        <li class="list-inline-item">
+                        
+                        </li>
+                    </ul>
                 </div>
             </div>
+
         </div>
     </div>
 </section>
