--- a/views/UserPanel/footer.ejs
+++ b/views/UserPanel/footer.ejs
@@ -840,6 +840,9 @@
     <!-- Bootstrap Notification js-->
     <script src="/assets/js/bootstrap-notify.min.js"></script>
 
+    <!-- timer js-->
+    <script src="/assets/js/timer1.js"></script>
+
     <!-- Fly cart js-->
     <script src="/assets/js/fly-cart.js"></script>
 
