--- a/views/UserPanel/userLogin.ejs
+++ b/views/UserPanel/userLogin.ejs
@@ -65,7 +65,7 @@
                             <input type="password" class="form-control" id="password" name="cpassword" placeholder="Password" required="">
                         </div>
                         <button type="submit" class="btn btn-solid me-1">Register</button>
-                        <a href="javascript: void(0);" class="btn rounded-pill border-danger text-danger"><i class="fa-brands fa-google"></i></a>
+                        <a href="/google" class="btn rounded-pill border-danger text-danger"><i class="fa-brands fa-google"></i></a>
                     </form>
                     
                 </div>
